--- a/src/components/styles/SocialIcons.css
+++ b/src/components/styles/SocialIcons.css
@@ -19,11 +19,9 @@
 }
 .social-icons:hover {
   transition: 0.3s;
-  color: var(--backgroundColor);
 }
 .social-icons a:hover {
-  color: var(--backgroundColor);
-  /* transform: scale(1.2); */
+  color: var(--accentColor);
 }
 .social-icons span {
   width: 50px;
@@ -56,17 +54,17 @@
   font-size: 15px;
   line-height: 15px;
   font-weight: 600;
-  color: #5e5e5e;
+  color: var(--muted);
   cursor: pointer;
   transition: 0.5s;
   transform-origin: left bottom;
   transform: translateX(100%) rotateZ(-90deg);
 }
 .resume-button:hover {
-  color: #fff;
+  color: var(--accentColor);
 }
 div.resume-button span {
-  color: #fff;
+  color: var(--fg);
   font-size: 17px;
   margin-top: -1px;
   display: flex;
